--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ repositories {
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter')
 	compile("io.reactivex.rxjava2:rxjava:2.2.4")
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("com.h2database:h2")
 	compileOnly('org.projectlombok:lombok:1.18.4')
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
